# gift-propaganda

./: .env.template  DEPLOYMENT_SUMMARY_FINAL.txt  DEPLOYMENT_SUMMARY_FINAL_PYTHON_FIX.txt  DEPLOYMENT_SUMMARY_PYDANTIC_FIXED.txt  DEPLOYMENT_SUMMARY_PYTHON_FIX.txt  DEPLOYMENT_SUMMARY_WORKING.txt  DEPLOY_SUMMARY_FIXED.md  Pipfile  RENDER_DEPLOY.md  RENDER_DEPLOY_INSTRUCTIONS.txt  RENDER_SIMPLE_DEPLOY.md  TROUBLESHOOTING.md  deploy.sh  deploy_final.py  deploy_final_python_fix.py  deploy_final_working.py  deploy_fixed.py  deploy_fixed_pydantic.py  deploy_python_fix.py  deploy_render.py  deploy_render_auto.py  deploy_to_render.py  news.db  pyproject.toml  quick_deploy_render.py  render.yaml  requirements-minimal.txt  requirements.txt  setup.py  simple_test.py  test_app.py  test_db_connection.py
server/: db.py  main.py  models.py
server/parsers/: telegram_news_service.py
